HIS/force-app/main/default/objects/Opportunity/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Amount -  Total_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>