HIS/force-app/main/default/objects/Opportunity/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <label>Product Count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>