HIS/force-app/main/default/objects/Opportunity/fields/Reservation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_End_Date__c</fullName>
    <defaultValue>TODAY() +3</defaultValue>
    <label>Reservation End Date</label>
    <type>Date</type>
</CustomField>