HIS/force-app/main/default/objects/Opportunity/fields/Reservation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Reservation Start Date</label>
    <type>Date</type>
</CustomField>